--- a/sheet/index.html
+++ b/sheet/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D&D Character Sheet</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Upload a D&D Character Sheet</h1>
     <input type="file" id="fileInput" accept="application/json">
     <div id="sheetContainer"></div>
 
-    <script src="script.js"></script>
+    <script src="sheet.js"></script>
 </body>
 </html>
