--- a/sheet/index.html
+++ b/sheet/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Upload a D&D Character Sheet</h1>
-    <input type="file" id="fileInput" accept="application/json">
+    <h1>D&D Character Sheet</h1>
+    
+    <input type="file" id="fileInput" accept=".json">
     <div id="sheetContainer"></div>
 
     <script src="sheet.js"></script>
