--- a/sheet/index.html
+++ b/sheet/index.html
@@ -11,6 +11,7 @@
     
     <input type="file" id="fileInput" accept=".json">
     <div id="sheetContainer"></div>
+    <button id="downloadButton">Download Sheet</button>
 
     <script src="sheet.js"></script>
 </body>
