--- a/sheet/index.html
+++ b/sheet/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
     <h1>D&D Character Sheet</h1>
-    
-    <input type="file" id="fileInput" accept=".json">
+    <input type="file" id="fileInput" accept="application/json">
     <div id="sheetContainer"></div>
-    <button id="downloadButton">Download Sheet</button>
-
+    <button id="downloadBtn" style="display:none;">Download</button>
     <script src="sheet.js"></script>
 </body>
 </html>
